(HP-1796) Fix all heading styles to match layout and HDS
Also changed the max-width of the login-box, because new font-sizes do not fit well. Max-width is the same as in AccessibilityStatement

--- a/src/auth/components/login/Login.module.css
+++ b/src/auth/components/login/Login.module.css
@@ -11,7 +11,7 @@
   text-align: center;
   justify-content: center;
   align-items: center;
-  max-width: 600px;
+  max-width: var(--breakpoint-m);
   padding-top: var(--common-top-spacing);
   padding-bottom: var(--spacing-layout-l);
 }
