--- a/src/common/cssHelpers/form.module.css
+++ b/src/common/cssHelpers/form.module.css
@@ -6,7 +6,6 @@
 }
 
 .section-title {
-  font-size: var(--h3-size);
   border-bottom: 1px solid var(--color-black-30);
   width: 100%;
   padding-bottom: var(--spacing-layout-2-xs);
