--- a/src/common/expandingPanel/ExpandingPanel.module.css
+++ b/src/common/expandingPanel/ExpandingPanel.module.css
@@ -15,7 +15,6 @@
 .title h2 {
   margin: 0;
   font-size: var(--h3-size);
-  color: var(--color-bus);
 }
 
 .right-side-information {
